# android_ffmpeg_example

./: README.md
FFMPEGEXAMPLE/app/: CMakeLists.txt  build.gradle
FFMPEGEXAMPLE/app/src/androidTest/java/test/yves/com/ffmpegexample/: ExampleInstrumentedTest.java
FFMPEGEXAMPLE/app/src/main/: AndroidManifest.xml
FFMPEGEXAMPLE/app/src/main/cpp/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c  logger.h  native-lib.cpp
FFMPEGEXAMPLE/app/src/main/cpp/include/libavutil/: ffversion.h
FFMPEGEXAMPLE/app/src/main/java/test/yves/com/ffmpegexample/: MainActivity.java
FFMPEGEXAMPLE/app/src/main/res/layout/: activity_main.xml
FFMPEGEXAMPLE/app/src/main/res/values/: strings.xml
FFMPEGEXAMPLE/app/src/test/java/test/yves/com/ffmpegexample/: ExampleUnitTest.java
FFMPEGEXAMPLE/gradle/wrapper/: gradle-wrapper.properties
